Fixed issue where posts had different date spacing

--- a/style.scss
+++ b/style.scss
@@ -476,7 +476,7 @@ tbody tr:nth-child(odd) th {
 
 .post {
   &-title {
-    margin-bottom: -.55rem;
+    margin-bottom: -.30rem;
   }
   &-date {
     margin-bottom: 2rem;
